--- a/.github/workflows/horusec.yml
+++ b/.github/workflows/horusec.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
       with: # Required when commit authors is enabled
         fetch-depth: 0
-    - name: Running Horusec Security
+    - name: Running Horusec Security on form_app
       run: |
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-        horusec start -p="./" -e="true" -D -o="sarif"
+        horusec start -p="./form_app" -e="true" -D -o="sarif"
