--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -85,21 +85,21 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
     
     - if: matrix.language == 'java-kotlin' || matrix.language == 'swift'
-    - uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9
+      uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9
       with:
         distribution: 'zulu'
         java-version: '17'
 
     - if: matrix.language == 'java-kotlin' || matrix.language == 'swift'
-    - uses: subosito/flutter-action@44ac965b96f18d999802d4b807e3256d5a3f9fa1
+      uses: subosito/flutter-action@44ac965b96f18d999802d4b807e3256d5a3f9fa1
       with:
         channel: stable
     
     - if: matrix.language == 'java-kotlin'
-    - run: ./tool/android_ci_script.sh
+      run: ./tool/android_ci_script.sh
 
     - if: matrix.language == 'swift'
-    - run: ./tool/ios_ci_script.sh
+      run: ./tool/ios_ci_script.sh
 
       
     - name: Perform CodeQL Analysis
