--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -19,6 +19,10 @@ on:
   schedule:
     - cron: '33 1 * * 3'
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
